app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_directory ./application
 */

$gridColumnWidth: 70px !default;
$gridGutterWidth: 30px !default;
$gridRowWidth: (12 * $gridColumnWidth) + ($gridGutterWidth * 11) !default;
$navbarBackgroundHighlight: #E2E2E2;
$navbarBackground: #D2D2D2;
@import 'bootstrap';



html,body  {
  height:100%;
  background-color: $gray-lighter;
}

.main-container {
  padding-top:60px;

  .main-content {
    margin-top:20px;
    padding-top:10px;
  }
}

@media (max-width:767px) {
  .main-container {
    padding-top: 10px;
    .main-content {
      margin-top: 0px;
      padding-top:5px;
    }
  }
}


#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -35px;
}

#push {
  height: 35px;
}

footer  {
  height: 35px;
  background-color: #F8F8F8;
  //@include box-shadow(0 -1px 10px rgba(0, 0, 0, 0.1));
  border: 1px solid #E7E7E7;
  border-width: 1px 0 0 0;
}

@media (max-width: 767px) {
  footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

.currency {
	text-align: right;
}
.helptext {
	color: $gray-light;
	font-size: small;
	text-align: center;
}
.inline-buttons {
	& > form {
		display: inline-block;
		margin: 0px;
		& input[type="submit"],input[type="reset"],button {
			display: inline;
		}
	}
}

.manatee-logo {
  font-family: 'Changa One', cursive;
}

